examples/should-fail/f28_bad_annotation_dep_position.lean
def demo3_bad_annotation_dep_position : (A : Type) -> A -> A :=
  fun (A : Type) (x : A) =>
    (x : Type)
